# HW_WEB_08

./: main.py  pyproject.toml
models/: models.py
seeds/: seeds.py
task_rabbit/: consumer.py  producer.py
